# epcs2-emu

./: .clang-format  .gitignore  CMakeLists.txt
src/: app.cpp  mips_instr.h  mmu.cpp  mmu.h  r5900_regs.h  r5900_vcpu.cpp  r5900_vcpu.h  sys_memory.cpp  sys_memory.h
src/core/: intrinsics.h  log.h  os.h  types.h
test/: CMakeLists.txt  epcs2_r5900_isa_branch_test.cpp  epcs2_r5900_isa_ialu_test.cpp  epcs2_r5900_isa_test.h
